Reduced Index Page Heading Gaps, removed ruler icon and replaced with arrows alt, removed green border from modals,fixed subscribe grid on listing pages,made key partners carousel auto movable, altered email and call bg and hover colors

--- a/website/css/custom.css
+++ b/website/css/custom.css
@@ -1167,6 +1167,30 @@ footer {
 .partners .slick-arrow-buton {
     top: 40%;
 }
-.hover-color:hover{
- color: #274abb;
+
+.hover-color:hover {
+    color: #274abb;
+}
+
+.sidebar-right {
+    margin-top: 32%;
+}   }
+}
+
+.btn-call , .btn-email{
+    border-color: #2238D8;
+}
+.btn-email{
+    background-color: #2238D8;
+    color: white !important;
+}
+.btn-call:hover , .btn-email:hover {
+    background-color: #2238D8;
+    color:white !important;
+}
+.content-area-12 {
+    padding: 40px 0 40px;
+}
+.partners{
+    margin-bottom :0px;
 }
